# QuickScreen

./: .gitignore  Cargo.toml  README.md  localhost+1-key.pem  localhost+1.pem
GO/: video-client-simple.swift  video-server.go
examples/: moq_simple.rs
mac/QuicScreenSharing/QuicScreenSharing/: ContentView.swift  QuicScreenSharingApp.swift  QuicTransportPersistent.swift  ScreenCaptureManager.swift  ScreenCaptureViewModel.swift
mac/QuicScreenSharing/QuicScreenSharing.xcodeproj/: project.pbxproj
mac/QuicScreenSharing/QuicScreenSharing.xcodeproj/xcshareddata/xcschemes/: QuicScreenSharing.xcscheme
src/: main.rs  main_proper.rs
web/: index.html
web-moq-local/: index.html  package-lock.json  package.json  vite.config.ts
web-moq-local/src/: main.ts
web/assets/: index-ZA86KSaf.js
